CHATS_SIT/force-app/main/default/objects/sfrosit_t_non_adjmt_detail_hist__x/sfrosit_t_non_adjmt_detail_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_non_adjmt_detail_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_non_adjmt_detail_hist</externalName>
    <label>Non Adjustment Detail History</label>
    <pluralLabel>Non Adjustment Detail History</pluralLabel>
</CustomObject>