CHATS_SIT/force-app/main/default/objects/sfrosit_t_non_adjmt_detail_hist__x/fields/amt_detail_adjmt__c.field-meta.xml
<CustomField>
    <fullName>amt_detail_adjmt__c</fullName>
    <description>amt_detail_adjmt</description>
    <externalDeveloperName>amt_detail_adjmt</externalDeveloperName>
    <label>Adjustment Detail Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>