CHATS_SIT/force-app/main/default/objects/sfrosit_t_non_adjmt_detail_hist__x/fields/idn_detail_adjmt_non__c.field-meta.xml
<CustomField>
    <fullName>idn_detail_adjmt_non__c</fullName>
    <description>idn_detail_adjmt_non</description>
    <externalDeveloperName>idn_detail_adjmt_non</externalDeveloperName>
    <label>Non Adjustment Detail ID</label>
    <length>50</length>
    <referenceTargetField>T_NON_ADJMT_DETAIL__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_NON_ADJMT_DETAIL__c</referenceTo>
    <relationshipLabel>Non Adjustment Detail Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_non_adjmt_detail_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>