CHATS_SIT/force-app/main/default/objects/sfrosit_t_non_adjmt_detail_hist__x/fields/idn_detail_adjmt_non_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_detail_adjmt_non_hist__c</fullName>
    <description>idn_detail_adjmt_non_hist</description>
    <externalDeveloperName>idn_detail_adjmt_non_hist</externalDeveloperName>
    <label>Non Adjustment Detail Hsitory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>