CHATS_SIT/force-app/main/default/objects/sfrosit_t_non_adjmt_detail_hist__x/fields/idn_prog_fndg__c.field-meta.xml
<CustomField>
    <fullName>idn_prog_fndg__c</fullName>
    <description>idn_prog_fndg</description>
    <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
    <label>Program finding Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>